<resources>
  <string name="app_name">Streamy Tunes</string>
  <string name="tab_text_1">Tab 1</string>
  <string name="tab_text_2">Tab 2</string>
  <string name="artists">Artists</string>
  <string name="pending">Pending…</string>
  <string name="albums">Albums</string>
  <string name="playlists">Playlists</string>
  <string name="please_wait">Please wait</string>
  <string name="in_progress">In Progress</string>
  <string name="pref_key_source">music_source</string>
  <string name="pref_category_source">Source</string>
  <string name="pref_title_source">Location of Music</string>
  <string name="pref_category_about">About</string>
  <string name="pref_key_app_version">key_app_version</string>
  <string name="pref_title_app_version">Application Version</string>
  <string name="pref_title_show_hidden">Show hidden media</string>
  <string name="settings">Settings</string>
  <string name="logout">Logout</string>
  <string name="logout_message">Are you sure you want to log out?</string>
  <string name="complete">Complete!</string>
  <string name="title_source">Source:</string>
  <string name="done">Done</string>
  <string name="discovery">Discovery</string>
  <string name="ok">OK</string>
  <string name="permission_storage">Permission needed for discovering media.</string>
  <string name="permission_phone">Permission needed for handling phone and power interactions.</string>
  <string name="permission_default">Permission needed for application to function properly.</string>
  <string name="desc_song_list">List of discovered songs.</string>
  <string name="placeholder">TBD</string>
  <string name="hint_remove_song">Remove song from device?</string>
  <string name="owned">Owned</string>
  <string name="read">Read</string>
  <string name="issue_number">Track</string>
  <string name="remove_specific_song_message">Remove \'%s\' from your library?</string>
  <string name="genres">Genres</string>
  <string name="desc_artists_list">List of artists.</string>
  <string name="desc_albums_list">List of albums.</string>
  <string name="desc_playlists_list">List of playlists.</string>
  <string name="album">Album</string>
  <string name="artist">Artist</string>
  <string name="song">Song</string>
  <string name="home">home</string>
  <string name="pref_key_is_music">key_is_music</string>
  <string name="pref_key_is_audiobook">key_is_audiobook</string>
  <string name="pref_key_is_podcast">key_is_podcast</string>
  <string name="pref_key_show_hidden">key_show_hidden</string>
  <string name="pref_key_audio_index">key_audio_index</string>
  <string name="pref_key_audio_list">key_audio_list</string>
  <string name="music">Music</string>
  <string name="authors">Authors</string>
  <string name="audiobooks">Audiobooks</string>
  <string name="podcasts">Podcasts</string>
  <string name="sync">Sync</string>
  <string name="casts">Podcasts</string>
  <string name="fragment_albums">Albums</string>
  <string name="sync_search">Searching and updating media library…</string>
  <string name="desc_options">Do something with this media</string>
  <string name="add_to_playlist">Add to playlist</string>
  <string name="favorites">Favorites</string>
  <string name="add_to_favorites">Add to Favorites</string>
  <string name="remove_from_favorites">Remove from Favorites</string>
  <string name="show">Show in library</string>
  <string name="hide">Hide from library</string>
  <string name="not_yet_implemented">Not Yet Implemented</string>
  <string name="pref_category_options">Options</string>
  <string name="adding_to_favorites">Adding to favorites</string>
  <string name="removing_from_favorites">Removing from favorites</string>
  <string name="showing_media">Showing media in library</string>
  <string name="hiding_media">Hiding media from library</string>
  <string name="no_media_found">No media found. Try refreshing.</string>
  <string name="drag_media">Move media item</string>
  <string name="add_or_remove_favorite">Add or Remove Favorite</string>
  <string name="media_url_mp3">https://storage.googleapis.com/exoplayer-test-media-0/play.mp3</string>
  <string name="description_play">play the track</string>
  <string name="desc_play_media">Play media</string>
  <string name="desc_previous_media">Previous media</string>
  <string name="desc_next_media">Next media</string>
  <string name="desc_album_image">Album image</string>
  <string name="label_play">Play</string>
  <string name="label_pause">Pause</string>
  <string name="label_next">Next Track</string>
  <string name="label_previous">Previous Track</string>
  <string name="permission_request">App cannot function without required permissions.</string>
  <string name="permissions">Access to storage and phone needed to function properly.</string>

  <plurals name="format_songs">
    <item quantity="one">1 song</item>
    <item quantity="other">%d songs</item>
  </plurals>
  <plurals name="format_artists">
    <item quantity="one">1 artist</item>
    <item quantity="other">%d artists</item>
  </plurals>
  <plurals name="format_albums">
    <item quantity="one">1 artist</item>
    <item quantity="other">%d artists</item>
  </plurals>
  <plurals name="format_playlists">
    <item quantity="one">1 playlist</item>
    <item quantity="other">%d playlists</item>
  </plurals>
  <plurals name="format_authors">
    <item quantity="one">1 author</item>
    <item quantity="other">%d authors</item>
  </plurals>
  <plurals name="format_audiobooks">
    <item quantity="one">1 audiobook</item>
    <item quantity="other">%d audiobooks</item>
  </plurals>
  <plurals name="format_podcasts">
    <item quantity="one">1 podcast</item>
    <item quantity="other">%d podcasts</item>
  </plurals>

</resources>
