<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <ImageView
    android:id="@+id/player_image_album"
    android:layout_width="@dimen/image_width_thumbnail"
    android:layout_height="@dimen/image_height_thumbnail"
    android:layout_margin="@dimen/default_view_margin"
    android:contentDescription="@string/desc_album_image"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/ic_song_dark" />

  <TextView
    android:id="@+id/player_text_song"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/placeholder"
    android:textColor="@color/colorAccent"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/player_image_album"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/player_text_details"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/placeholder"
    app:layout_constraintStart_toEndOf="@id/player_image_album"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/player_text_song" />

  <ImageButton
    android:id="@+id/player_image_prev"
    android:layout_width="@dimen/image_width_thumbnail"
    android:layout_height="@dimen/image_height_thumbnail"
    android:layout_margin="@dimen/default_view_margin"
    android:background="@color/transparent"
    android:contentDescription="@string/desc_previous_media"
    app:layout_constraintEnd_toStartOf="@id/player_image_play_pause"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/player_image_album"
    app:srcCompat="@drawable/ic_previous_dark" />

  <ImageButton
    android:id="@+id/player_image_play_pause"
    android:layout_width="@dimen/image_width_thumbnail"
    android:layout_height="@dimen/image_height_thumbnail"
    android:layout_margin="@dimen/default_view_margin"
    android:layout_marginStart="4dp"
    android:background="@color/transparent"
    android:contentDescription="@string/desc_play_media"
    app:layout_constraintEnd_toStartOf="@id/player_image_next"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/player_image_prev"
    app:layout_constraintTop_toBottomOf="@id/player_image_album"
    app:srcCompat="@drawable/ic_play_dark" />

  <ImageButton
    android:id="@+id/player_image_next"
    android:layout_width="@dimen/image_width_thumbnail"
    android:layout_height="@dimen/image_height_thumbnail"
    android:layout_margin="@dimen/default_view_margin"
    android:layout_marginStart="5dp"
    android:background="@color/transparent"
    android:contentDescription="@string/desc_next_media"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/player_image_play_pause"
    app:layout_constraintTop_toBottomOf="@id/player_image_album"
    app:srcCompat="@drawable/ic_next_dark" />

</androidx.constraintlayout.widget.ConstraintLayout>