<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginStart="2dp"
  android:layout_marginTop="2dp"
  android:layout_marginEnd="2dp"
  android:background="@color/background">

  <ImageView
    android:id="@+id/media_item_image"
    android:layout_width="@dimen/image_width_thumbnail"
    android:layout_height="@dimen/image_height_thumbnail"
    android:layout_margin="@dimen/default_view_margin"
    android:background="@color/transparent"
    android:src="@drawable/ic_song_dark"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:contentDescription="@string/song" />

  <TextView
    android:id="@+id/media_item_text_title"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:ellipsize="end"
    android:singleLine="true"
    android:text="@string/placeholder"
    android:textColor="@color/primaryAccentText"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toStartOf="@id/media_item_image_playlist"
    app:layout_constraintStart_toEndOf="@id/media_item_image"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/media_item_text_subtitle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:ellipsize="end"
    android:singleLine="true"
    android:text="@string/placeholder"
    android:textColor="@color/colorPrimary"
    android:textSize="14sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toStartOf="@id/media_item_image_playlist"
    app:layout_constraintStart_toEndOf="@id/media_item_image"
    app:layout_constraintTop_toBottomOf="@id/media_item_text_title" />

  <ImageView
    android:id="@+id/media_item_image_playlist"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:src="@drawable/ic_playlist_dark"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/media_item_text_subtitle"
    app:layout_constraintBottom_toTopOf="@id/media_item_image_visible"
    android:contentDescription="@string/desc_options" />

  <TextView
    android:id="@+id/media_item_text_details"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:ellipsize="end"
    android:singleLine="true"
    android:text="@string/placeholder"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@id/media_item_image_favorite"
    app:layout_constraintStart_toEndOf="@id/media_item_image"
    app:layout_constraintTop_toBottomOf="@id/media_item_text_subtitle" />

  <ImageView
    android:id="@+id/media_item_image_favorite"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:background="@color/transparent"
    android:src="@drawable/ic_unfavorite_dark"
    app:layout_constraintTop_toBottomOf="@id/media_item_text_subtitle"
    app:layout_constraintEnd_toStartOf="@id/media_item_image_visible"
    app:layout_constraintBottom_toBottomOf="parent"
    android:contentDescription="@string/desc_options" />

  <ImageView
    android:id="@+id/media_item_image_visible"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:background="@color/transparent"
    android:src="@drawable/ic_visible_dark"
    app:layout_constraintTop_toBottomOf="@id/media_item_text_subtitle"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:contentDescription="@string/desc_options" />

</androidx.constraintlayout.widget.ConstraintLayout>
